init task and behavior in own functions

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -33,6 +33,8 @@
                         id="behaviorCanvasParent"
                         style="text-align: center"
                     ></div>
+                    <div id="behavior1title">&rarr;</div>
+                    <!--x axis -->
                 </div>
             </div>
             <div>
