--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -29,12 +29,15 @@
                 </div>
                 <div id="behaviorcontent" style="display: none">
                     <p id="behaviorinstructions" class="space-around"></p>
-                    <div
-                        id="behaviorCanvasParent"
-                        style="text-align: center"
-                    ></div>
-                    <div id="behavior1title">&rarr;</div>
-                    <!--x axis -->
+                    <div class="behaviorgrid">
+                        <div id="behavior2title">&rarr;</div>
+                        <div
+                            id="behaviorCanvasParent"
+                            style="text-align: center"
+                        ></div>
+                        <div id="behavior1title">&rarr;</div>
+                        <!--x axis -->
+                    </div>
                 </div>
             </div>
             <div>
