--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -23,10 +23,8 @@
         >
             <div>
                 <div id="gameinstructions" class="space-around"></div>
-                <div>Length of current route: <b id="currentscore"></b></div>
-                <div>
-                    Length of shortest route found: <b id="bestscore"></b>
-                </div>
+                <div>Current score: <b id="currentscore"></b></div>
+                <div>Bext overall score: <b id="bestscore"></b></div>
                 <div id="behaviorcontent" style="display: none">
                     <p id="behaviorinstructions" class="space-around"></p>
                     <div class="behaviorgrid">
