no nodemon, better knapsack instructions, no solver button when behavior is hidden

--- a/src/templates/knapsack.html
+++ b/src/templates/knapsack.html
@@ -52,6 +52,6 @@
                 </div>
             </div>
         </div>
-        <button id="solvetoggle">Toggle solver</button>
+        <button id="solvetoggle" style="display: none">Toggle solver</button>
     </body>
 </html>
