--- a/src/templates/tsp.html
+++ b/src/templates/tsp.html
@@ -24,7 +24,7 @@
             <div>
                 <div id="gameinstructions" class="space-around"></div>
                 <div>Current score: <b id="currentscore"></b></div>
-                <div>Bext overall score: <b id="bestscore"></b></div>
+                <div>Best overall score: <b id="bestscore"></b></div>
                 <div id="behaviorcontent" style="display: none">
                     <p id="behaviorinstructions" class="space-around"></p>
                     <div class="behaviorgrid">
