--- a/src/templates/knapsack.html
+++ b/src/templates/knapsack.html
@@ -16,15 +16,17 @@
                 bonus code at any time regardless of score!
             </div>
         </div>
+        <div id="gameinstructions" class="space-around"></div>
         <div
             id="onscreen"
             class="flex-container"
             style="justify-content: space-around"
         >
             <div>
-                <div id="gameinstructions" class="space-around"></div>
-                <div>Current score: <b id="currentscore"></b></div>
-                <div>Best overall score: <b id="bestscore"></b></div>
+                <div class="space-around">
+                    <div>Current score: <b id="currentscore"></b></div>
+                    <div>Best overall score: <b id="bestscore"></b></div>
+                </div>
                 <div id="behaviorcontent" style="display: none">
                     <p id="behaviorinstructions" class="space-around"></p>
                     <div class="behaviorgrid">
