--- a/src/templates/tsp.html
+++ b/src/templates/tsp.html
@@ -54,6 +54,6 @@
                 </div>
             </div>
         </div>
-        <button id="solvetoggle" style="display: none">Toggle solver</button>
+        <!-- <button id="solvetoggle" style="display: none">Toggle solver</button> -->
     </body>
 </html>
