--- a/src/templates/knapsack.html
+++ b/src/templates/knapsack.html
@@ -23,6 +23,7 @@
             <div class="space-around">
                 <div>Current score: <b id="currentscore"></b></div>
                 <div>Best overall score: <b id="bestscore"></b></div>
+                <div><b id="aim"></b> is better.</div>
             </div>
             <div id="behaviorcontent" style="display: none">
                 <p id="behaviorinstructions" class="space-around"></p>
@@ -36,7 +37,7 @@
         </div>
         <div>
             <div id="taskCanvasParent"></div>
-            <div class="flex-container space-between">
+            <div class="flex-container space-around flex-wrap">
                 <button id="bestSolutionButton">
                     Restore best solution
                 </button>
