behavior axis colored for TSP, p -> div

--- a/src/templates/knapsack.html
+++ b/src/templates/knapsack.html
@@ -26,7 +26,7 @@
                 <div><b id="aim"></b> is better.</div>
             </div>
             <div id="behaviorcontent" style="display: none">
-                <p id="behaviorinstructions" class="space-around"></p>
+                <div id="behaviorinstructions" class="space-around"></div>
                 <div class="behaviorgrid">
                     <div id="behavior2title">&rarr;</div>
                     <div id="behaviorCanvasParent" style="text-align: center"></div>
