loading solutions via dropdown!

--- a/src/templates/knapsack.html
+++ b/src/templates/knapsack.html
@@ -28,6 +28,11 @@
                     <div>Best overall score: <b id="bestscore"></b></div>
                     <div><b id="aim"></b> is better.</div>
                 </div>
+                <div id="solutioncontent" style="display: none">
+                    <label for="solutions">Load a solution:</label>
+                    <select name="solutions" id="solutionselect"></select>
+                    <button id="loadSolutionButton">Load</button>
+                </div>
                 <div id="behaviorcontent" style="display: none">
                     <div id="behaviorinstructions" class="space-around"></div>
                     <div class="behaviorgrid">
